--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   padding: 12px 0;
+  z-index: 3;
   background-color: var(--grey-color);
   display: none;
   @include small-tablet {
