--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -7,7 +7,7 @@
     top: 62px;
     left: 0;
     height: 100vh;
-    z-index: 20;
+    z-index: 40;
     width: 100%;
     background-color: var(--grey-color);
   }
